--- a/src/main/webapp/app/entities/debt/debt.component.html
+++ b/src/main/webapp/app/entities/debt/debt.component.html
@@ -46,7 +46,7 @@
                 </td>
                 <td>
                     <div *ngIf="debt.contact">
-                        <a [routerLink]="['/contact', debt.contact?.id, 'view' ]" >{{debt.contact?.id}}</a>
+                        <a [routerLink]="['/contact', debt.contact?.id, 'view' ]" >{{debt.contact?.firstName}} {{debt.contact?.lastName}}</a>
                     </div>
                 </td>
                 <td class="text-right">
