--- a/src/main/webapp/app/entities/debt/debt-update.component.html
+++ b/src/main/webapp/app/entities/debt/debt-update.component.html
@@ -27,6 +27,7 @@
                 <div class="form-group">
                     <label class="form-control-label" jhiTranslate="moneyIoApp.debt.currency" for="field_currency">Currency</label>
                     <select class="form-control" name="currency" formControlName="currency" id="field_currency">
+                        <option value="EUR" selected>{{'moneyIoApp.Currency.EUR' | translate}}</option>
                         <option value="AED">{{'moneyIoApp.Currency.AED' | translate}}</option>
                         <option value="AFN">{{'moneyIoApp.Currency.AFN' | translate}}</option>
                         <option value="ALL">{{'moneyIoApp.Currency.ALL' | translate}}</option>
@@ -70,7 +71,7 @@
                         <option value="EGP">{{'moneyIoApp.Currency.EGP' | translate}}</option>
                         <option value="ERN">{{'moneyIoApp.Currency.ERN' | translate}}</option>
                         <option value="ETB">{{'moneyIoApp.Currency.ETB' | translate}}</option>
-                        <option value="EUR">{{'moneyIoApp.Currency.EUR' | translate}}</option>
+
                         <option value="FJD">{{'moneyIoApp.Currency.FJD' | translate}}</option>
                         <option value="FKP">{{'moneyIoApp.Currency.FKP' | translate}}</option>
                         <option value="GBP">{{'moneyIoApp.Currency.GBP' | translate}}</option>
