--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer">
-    <p jhiTranslate="footer">Copyright &copy; 20280 Money-IO</p>
+    <p jhiTranslate="footer">Copyright &copy; 2020 MoneyIO</p>
 </div>
